/**
 * Copyright (C) 2022 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

edition = "2023";

package privacy.krypton.desktop;

import "google/protobuf/timestamp.proto";

option features.utf8_validation = NONE;
option cc_api_version = 2;

// OAuth 2.0 Configuration.
message OAuthConfig {
  // PPN Desktop client id.
  string client_id = 1;

  // Redirect URI.
  string client_secret = 2;

  // OAuth 2.0 Token endpoint.
  string token_endpoint = 5;

  // OAuth 2.0 scopes.
  repeated string scopes = 6;

  // OAuth 2.0 UserInfo endpoint.
  string userinfo_endpoint = 7;

  // OAuth 2.0 refresh token.
  string refresh_token = 8;

  reserved 3, 4;
}

message OAuthTokenRequest {
  // OAuth 2.0 authorization code.
  string code = 1;

  // OAuth 2.0 code_verifier used as part of PKCE.
  string code_verifier = 2;
}

message OAuthTokenRefreshRequest {
  // OAuth 2.0 refresh token.
  string refresh_token = 1;
}

// Proto representation of OAuth 2.0 Response.
// Fields with json_name annotation correspond to their respective fields
// defined in
// https://developers.google.com/identity/protocols/oauth2/native-app#exchange-authorization-code.
message OAuthTokenResponse {
  // Access token returned as part of either initial token request or refresh
  // token request.
  string access_token = 1;

  // Seconds until access_token expires.
  int64 expires_in = 2;

  // Refresh token used to get new access_tokens. Only returned by initial
  // token request.
  string refresh_token = 3;

  // Should be Bearer.
  string token_type = 4;

  // Space-delimited list of scopes for this particular access_token.
  string scope = 5;

  // Expiration timestamp. This is manually populated.
  google.protobuf.Timestamp expires_at = 6;

  // JSON Web Token (JWT) that contains digitally signed identity information
  // about the user.
  string id_token = 7;
}

// Selected fields contained in UserInfo JSON that are of interest to us.
// The fields and their descriptions are detailed in the Identity Platform
// Documentation:
// https://cloud.google.com/identity-platform/docs/reference/rest/v1/UserInfo
message UserInfo {
  string email = 1;
}
